tests/testcases/invalid/02_unknown_escape_in_string.ciel
fn main() -> int {
    char s[] = "Bad\qEscape";
    return 0;
}
